added some more paper and marked Koehn2008

--- a/docear/_data/154ED8407E89FCASQ6GZXVKVYB0712RGQW1X/default_files/martin-ba.bib
+++ b/docear/_data/154ED8407E89FCASQ6GZXVKVYB0712RGQW1X/default_files/martin-ba.bib
@@ -65,6 +65,20 @@
   publisher = {Oxford University Press}
 }
 
+@ARTICLE{Hucka2015,
+  author = {Hucka, Michael and Nickerson, David P and Bader, Gary D and Bergmann,
+	Frank T and Cooper, Jonathan and Demir, Emek and Garny, Alan and
+	Golebiewski, Martin and Myers, Chris J and Schreiber, Falk and others},
+  title = {Promoting coordinated development of community-based information
+	standards for modeling in biology: the COMBINE initiative},
+  journal = {Frontiers in bioengineering and biotechnology},
+  year = {2015},
+  volume = {3},
+  pages = {19},
+  file = {:/home/martin/git/martin-thesis-ba/literature/sems/fbioe-03-00019.pdf:PDF},
+  publisher = {Frontiers}
+}
+
 @INPROCEEDINGS{Kohn2008,
   author = {K{\"o}hn, Dagmar and Le Novere, Nicolas},
   title = {SED-ML--an XML format for the implementation of the MIASE guidelines},
@@ -73,6 +87,17 @@
   pages = {176--190},
   organization = {Springer},
   file = {:/home/martin/git/martin-thesis-ba/literature/sems/2008Koehn-Springer Reproducible computational biology experiments with SED-ML-the simulation experiment description markup language.pdf:PDF}
+}
+
+@ARTICLE{Scharm2015,
+  author = {Scharm, Martin and Wolkenhauer, Olaf and Waltemath, Dagmar},
+  title = {An algorithm to detect and communicate the differences in computational
+	models describing biological systems},
+  journal = {Bioinformatics},
+  year = {2015},
+  pages = {btv484},
+  file = {:/home/martin/git/martin-thesis-ba/literature/sems/Bioinformatics-2016-Scharm-563-70.pdf:PDF},
+  publisher = {Oxford Univ Press}
 }
 
 @OTHER{Siriwaradhana2014,
