--- a/docear/_data/154ED8407E89FCASQ6GZXVKVYB0712RGQW1X/default_files/martin-ba.bib
+++ b/docear/_data/154ED8407E89FCASQ6GZXVKVYB0712RGQW1X/default_files/martin-ba.bib
@@ -24,6 +24,23 @@
   timestamp = {2016.06.15}
 }
 
+@OTHER{Courtot,
+  abstract = {Molecular Systems Biology 7,  (2011). doi:10.1038/msb.2011.77},
+  author = {M\&eacute;lanie Courtot and Nick Juty and Christian Kn\&uuml;pfer
+	and Dagmar Waltemath and Anna Zhukova and Andreas Dr\&auml;ger and
+	Michel Dumontier and Andrew Finney and Martin Golebiewski and Janna
+	Hastings and Stefan Hoops and Sarah Keating and Douglas B Kell and
+	Samuel Kerrien and James Lawson and Allyson Lister and James Lu and
+	Rainer Machne and Pedro Mendes and Matthew Pocock and Nicolas Rodriguez
+	and Alice Villeger and Darren J Wilkinson and Sarala Wimalaratne
+	and Camille Laibe and Michael Hucka and Nicolas Le Nov\&egrave;re},
+  doi = {doi:10.1038/msb.2011.77},
+  file = {:/home/martin/git/martin-thesis-ba/literature/sems/543.full.pdf:PDF},
+  publishers = {Nature Publishing Group},
+  rights = {© 2011 EMBO and Macmillan Publishers Limited},
+  title = {Controlled vocabularies and semantics in systems biology}
+}
+
 @INCOLLECTION{DeVirgilio2014,
   author = {De Virgilio, Roberto and Maccioni, Antonio and Torlone, Riccardo},
   title = {Model-driven design of graph databases},
