--- a/docear/_data/154ED8407E89FCASQ6GZXVKVYB0712RGQW1X/default_files/martin-ba.bib
+++ b/docear/_data/154ED8407E89FCASQ6GZXVKVYB0712RGQW1X/default_files/martin-ba.bib
@@ -25,7 +25,7 @@
 }
 
 @OTHER{Courtot,
-  abstract = {Molecular Systems Biology 7,  (2011). doi:10.1038/msb.2011.77},
+  abstract = {Molecular Systems Biology 7, (2011). doi:10.1038/msb.2011.77},
   author = {M\&eacute;lanie Courtot and Nick Juty and Christian Kn\&uuml;pfer
 	and Dagmar Waltemath and Anna Zhukova and Andreas Dr\&auml;ger and
 	Michel Dumontier and Andrew Finney and Martin Golebiewski and Janna
@@ -104,6 +104,16 @@
   pages = {176--190},
   organization = {Springer},
   file = {:/home/martin/git/martin-thesis-ba/literature/sems/2008Koehn-Springer Reproducible computational biology experiments with SED-ML-the simulation experiment description markup language.pdf:PDF}
+}
+
+@OTHER{Scharm,
+  abstract = {Journal of Biomedical Semantics, 2016, doi:10.1186/s13326-016-0080-2},
+  author = {Martin Scharm},
+  doi = {10.1186/s13326-016-0080-2},
+  file = {:/home/martin/git/martin-thesis-ba/literature/sems/Biomedical-2016-Scharm-COMODI.pdf:PDF},
+  publishers = {Journal of Biomedical Semantics},
+  title = {COMODI: An ontology to characterise differences in versions of computational
+	models in biology}
 }
 
 @ARTICLE{Scharm2015,
