removed an uneccarry letter

--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -9,4 +9,4 @@
 \newcommand{\json}{JSON\xspace}
 \newcommand{\numl}{NuML\xspace}
 \newcommand{\combine}{COMBINE\xspace}
-\newcommand{\ca}{\combine~archive\xspace}s
+\newcommand{\ca}{\combine~archive\xspace}
