--- a/docear/tex-export/ba-thesis_2-Backg.tex
+++ b/docear/tex-export/ba-thesis_2-Backg.tex
@@ -87,22 +87,22 @@
           \begin{description}
             \item[binary relations (e.g. one-to-many or many-to-many)] - 
             % BEGIN {binary relations (e.g. one-to-many or many-to-many)}
-            \begin{description}
+            %\begin{description}
               \item[become edge type] - 
               \item[name of relation becomes the edge label] - 
               \item[associated attributes become properties] - 
               \item[end-point of the edge-type are the vertex-type corresponding to the related entity type] - 
               \item[direction does not matter] - 
-            \end{description} % END {binary relations (e.g. one-to-many or many-to-many)}
+            %\end{description} % END {binary relations (e.g. one-to-many or many-to-many)}
             \item[n-ary relations] - 
             % BEGIN {n-ary relations}
-            \begin{description}
+            %\begin{description}
               \item[name of the the relation becomes name of a [new] vertex type] - 
               \item[associated attributes become the properties of the vertex type] - 
               \item[new vertex-type includes edges to vertex-types corresponding to the related entity-types] - 
               \item[these edges are labeled after the role of the participating entity in the relationship] - 
               \item[directions do not matter] - 
-            \end{description} % END {n-ary relations}
+            %\end{description} % END {n-ary relations}
           \end{description} % END {relations}
         \end{description} % END {Entity Relation}
         \item[Relation Table] - 
