--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,10 +1,19 @@
 \section{Motivation}
-\begin{itemize}
-	\item reproducibility\\
-		\sedml is useless, when model changes
-	\item transparency
-	\item tracking differences
-	\subitem what has changed
-	\subitem who has changed it
-	\subitem oxford2012 + first bives paper
-\end{itemize}
+- Reproducibility
+	- \sedml is useless, when model changes
+- Transparency
+- Tracking differences
+	- what has changed
+	- who has changed it
+	- oxford2012 + first bives paper
+	
+- Doing analysis of the evolution of a biological model
+- provide a comprehensive repository of biological models and their history
+- discover similarities and differences in the development of model through Ontology crosslinking
+- Motivation out of koehn2008 \cite{Kohn2008}
+
+\section{Goals}
+- extend an existing database to store multiple versions of one model in it
+- semantically connect the versions
+- store idfferences to allow for efficient analysis
+- \todo[talk about possible results]
