--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -10,3 +10,7 @@
 \newcommand{\numl}{NuML\xspace}
 \newcommand{\combine}{COMBINE\xspace}
 \newcommand{\ca}{\combine~archive\xspace}
+\newcommand{\masymos}{MaSyMoS\xspace}
+
+% TODO command
+\newcommand{\todo}[1][{\color{red} TODO}]{{\color{red} TODO: #1}}
