--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,19 +1,24 @@
 \section{Motivation}
-- Reproducibility
-	- \sedml is useless, when model changes
-- Transparency
-- Tracking differences
-	- what has changed
-	- who has changed it
-	- oxford2012 + first bives paper
+
+\begin{itemize}
+\item Reproducibility
+	\item \sedml is useless, when model changes
+\item Transparency
+\item Tracking differences
+	\item what has changed
+	\item who has changed it
+	\item oxford2012 + first bives paper
 	
-- Doing analysis of the evolution of a biological model
-- provide a comprehensive repository of biological models and their history
-- discover similarities and differences in the development of model through Ontology crosslinking
-- Motivation out of koehn2008 \cite{Kohn2008}
+\item Doing analysis of the evolution of a biological model
+\item provide a comprehensive repository of biological models and their history
+\item discover similarities and differences in the development of model through Ontology crosslinking
+\item Motivation out of koehn2008 \cite{Kohn2008}
+\end{itemize}
 
 \section{Goals}
-- extend an existing database to store multiple versions of one model in it
-- semantically connect the versions
-- store idfferences to allow for efficient analysis
-- \todo[talk about possible results]
+\begin{itemize}
+	\item extend an existing database to store multiple versions of one model in it
+\item semantically connect the versions
+\item store idfferences to allow for efficient analysis
+\item \todo[talk about possible results]
+\end{itemize}
