--- a/tex/outlook.tex
+++ b/tex/outlook.tex
@@ -1,2 +1,5 @@
-- Improving search index with metrics on how much impact a change had to the search criteria
-- detecting similar changes on different models
+
+\begin{itemize}
+	\item Improving search index with metrics on how much impact a change had to the search criteria
+	\item detecting similar changes on different models
+\end{itemize}
