--- a/tex/results.tex
+++ b/tex/results.tex
@@ -1,10 +1,13 @@
 \section{Concepts}
-- extension to database model
-	- linking version
-	- storing differences
-- decisions on storage model
-	- storing each version full (no delta-storag)
-	- each version is aware to the search index
-	- diff still enables for analysis of changes
-	- higher storage consumption
--extended storage model
+
+\begin{itemize}
+\item extension to database model
+	\subitem linking version
+	\subitem storing differences
+\item decisions on storage model
+	\subitem storing each version full (no delta-storag)
+	\subitem each version is aware to the search index
+	\subitem diff still enables for analysis of changes
+	\subitem higher storage consumption
+\item extended storage model
+\end{itemize}
