added whiteboard pictures

--- a/tex/ba-thesis.bib
+++ b/tex/ba-thesis.bib
@@ -120,8 +120,7 @@ guidelines},
   owner = {martin},
   timestamp = {2014.01.06},
   title = {From the entity-relationship to the property-graph model},
-  url =
-{https://lambdazen.blogspot.co.za/2014/01/from-entity-relationship-to-property.html},
+  url = {https://lambdazen.blogspot.co.za/2014/01/from-entity-relationship-to-property.html},
   year = {2014}
 }
 @STANDARD{a,
