--- a/tex/results.tex
+++ b/tex/results.tex
@@ -11,3 +11,15 @@
 	\subitem higher storage consumption
 \item extended storage model
 \end{itemize}
+
+\begin{figure}
+	\includegraphics[width=\textwidth]{resources/system_overview.jpg}
+	\caption{Infrastructure overview}
+	\label{fig:system-overview}
+\end{figure}
+
+\begin{figure}
+	\includegraphics[width=\textwidth]{resources/db_structure.jpg}
+	\caption{Proposed database structure}
+	\label{fig:db-model}
+\end{figure}
