--- a/tex/ba-thesis.bib
+++ b/tex/ba-thesis.bib
@@ -166,18 +166,6 @@ Nicolas and
   year = {2013},
   file = {:/home/martin/ownCloud/papers/2013/2013-12-02 sed-ml-L1V2.pdf:PDF}
 }
-@INPROCEEDINGS{Kohn2008,
-  author = {K{\"o}hn, Dagmar and Le Novere, Nicolas},
-  title = {SED-ML--an XML format for the implementation of the MIASE
-guidelines},
-  booktitle = {Computational Methods in Systems Biology},
-  year = {2008},
-  pages = {176--190},
-  organization = {Springer},
-  file = {:/home/martin/ownCloud/papers/2008/2008Koehn-Springer
-Reproducible computational biology experiments with SED-ML-the
-simulation experiment description markup language.pdf:PDF}
-}
 @ARTICLE{McEntyre2015,
   author = {McEntyre, Jo and Sarkans, Ugis and Brazma, Alvis},
   title = {The BioStudies database},
@@ -202,11 +190,9 @@ BioStudies database.pdf:PDF},
 Web-based kinetic modelling using JWS Online.pdf:PDF},
   publisher = {Oxford Univ Press}
 }
-@ARTICLE{Scharm2015,
+@ARTICLE{Scharm2015m2cat,
   author = {Scharm, Martin and Waltemath, Dagmar},
-  title = {Extracting reproducible simulation studies from model
-repositories
-	using the CombineArchive Toolkit},
+  title = {Extracting reproducible simulation studies from model repositories using the CombineArchive Toolkit},
   journal = {PeerJ PrePrints},
   year = {2015},
   volume = {3},
@@ -214,17 +200,6 @@ repositories
   file =
 {:/home/martin/ownCloud/papers/2014/2014-Scharm-Waltemath-Extracting-rep.pdf:PDF},
   publisher = {PeerJ Inc. San Francisco, USA}
-}
-@TECHREPORT{Scharm2016,
-  author = {Scharm, Martin and Waltemath, Dagmar and Mendes, Pedro and
-Wolkenhauer,
-	Olaf},
-  title = {COMODI: An ontology to characterise differences in versions
-of computational
-	models in biology},
-  institution = {PeerJ Preprints},
-  year = {2016},
-  file = {:/home/martin/ownCloud/papers/2016/2016-Scharm-COMODI.pdf:PDF}
 }
 @ARTICLE{scharm2014combinearchive,
   author = {Scharm, Martin and Wendland, Florian and Peters, Martin and
