--- a/tex/results.tex
+++ b/tex/results.tex
@@ -14,7 +14,7 @@
 
 \begin{figure}
 	\includegraphics[width=\textwidth]{resources/system_overview.jpg}
-	\caption{Infrastructure overview}
+	\caption{Infrastructure overview \todo[highlight the differences between optimal (proposed) infrstructure and the implementation]}
 	\label{fig:system-overview}
 \end{figure}
 
