--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -29,6 +29,9 @@
 	\chapter{Background}
 	\input{background.tex}
 	
+	\chapter{Conceptual Architecture}
+	\input{concept.tex}
+	
 	\chapter{Results}
 	\input{results.tex}
 	
