--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,1 +1,6 @@
 \todo
+\begin{itemize}
+	\item Benchmarks/stats on database
+		\subitem additional overhead (nodes/relations increase)
+	\item How to improve database/reduce overhead
+\end{itemize}
