--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,13 +1,19 @@
 \section{Motivation}
 
 \begin{itemize}
+\item Why is Reproducibility important (in life science/Bioinformatics)
+	\subitem what is a problem?
+	\subitem why is it important?
+	\subitem specific points regarding Systems Bio
+	\subitem refs to reproducible science
 \item Reproducibility
-	\item \sedml is useless, when model changes
+	\subitem \sedml scripts fails, when model changes
+
 \item Transparency
-\item Tracking differences
-	\item what has changed
-	\item who has changed it
-	\item oxford2012 + first bives paper
+\item Tracking differences (Provenance)
+	\subitem what has changed
+	\subitem who has changed it
+	\subitem oxford2012 + first bives paper
 	
 \item Doing analysis of the evolution of a biological model
 \item provide a comprehensive repository of biological models and their history
@@ -15,10 +21,17 @@
 \item Motivation out of koehn2008 \cite{Kohn2008}
 \end{itemize}
 
-\section{Goals}
+\todo[last paragraph of motivation is goals section, summarizing proposed solution]
+\todo[research gap ausarbeiten]
+\todo[look into MOST for stats regarding model versions]
 \begin{itemize}
-	\item extend an existing database to store multiple versions of one model in it
+\item develop a concept to support different versions in model databases
+	\subitem \todo[mention masymos directly?]
+	\subitem \todo[arg. structure bives->masymos//masymos->bives//generische mdb->version concept->bives->goal]
 \item semantically connect the versions
-\item store idfferences to allow for efficient analysis
+	\subitem relation between versions? + comodi terms
+	\subitem ref to semantic web
+	\subitem reason -> allow evaluation and analysis
+\item store differences to allow for efficient analysis
 \item \todo[talk about possible results]
 \end{itemize}
