--- a/tex/results.tex
+++ b/tex/results.tex
@@ -1,25 +1,4 @@
-\section{Concepts}
-
-\begin{itemize}
-\item extension to database model
-	\subitem linking version
-	\subitem storing differences
-\item decisions on storage model
-	\subitem storing each version full (no delta-storag)
-	\subitem each version is aware to the search index
-	\subitem diff still enables for analysis of changes
-	\subitem higher storage consumption
-\item extended storage model
-\end{itemize}
-
-\begin{figure}
-	\includegraphics[width=\textwidth]{resources/system_overview.jpg}
-	\caption{Infrastructure overview \todo[highlight the differences between optimal (proposed) infrstructure and the implementation]}
-	\label{fig:system-overview}
-\end{figure}
-
-\begin{figure}
-	\includegraphics[width=\textwidth]{resources/db_structure.jpg}
-	\caption{Proposed database structure}
-	\label{fig:db-model}
-\end{figure}
+\todo[what's done from the concept]
+\todo[still high-level]
+\todo[what problem is solved?]
+todo
