--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -13,4 +13,4 @@
 \newcommand{\masymos}{MaSyMoS\xspace}
 
 % TODO command
-\newcommand{\todo}[1][{\color{red} TODO}]{{\color{red} TODO: #1}}
+\newcommand{\todo}[1][]{{\color{red} TODO: #1\\}}
